--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "17.0.25",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.3.0",
+    "axios": "^0.24.0",
     "chart.js": "2.9.4",
     "clsx": "1.1.1",
     "date-fns": "2.25.0",
@@ -32,9 +33,12 @@
     "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.1.2",
+    "react-redux": "^7.2.6",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "web-vitals": "2.1.2",
@@ -80,8 +84,9 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "node-sass": "6.0.1",
     "prettier": "2.4.1",
-    "typescript": "4.4.4",
-    "node-sass": "6.0.1"
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "4.4.4"
   }
 }
