--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "2.25.0",
     "formik": "^2.2.9",
     "history": "5.0.1",
+    "moment": "^2.29.1",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prop-types": "15.7.2",
@@ -75,6 +76,7 @@
     "@types/react-router-dom": "5.3.1",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "14.0.1",
