--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.9",
     "history": "5.0.1",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prop-types": "15.7.2",
