--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "1.1.1",
     "date-fns": "2.25.0",
     "formik": "^2.2.9",
+    "geolib": "^3.3.3",
     "history": "5.0.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
