--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment-duration-format": "^2.3.2",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
+    "papaparse": "^5.3.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-chartjs-2": "2.11.1",
