--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
